# nth-prime

./: Cargo.toml
.github/workflows/: rust.yml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
